--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -6,6 +6,7 @@ tatami.ippon.twitter.follow=Follow @ippontech on Twitter
 tatami.title=Tatami
 tatami.profile=Profile
 tatami.home=Home
+tatami.beta.alert=Warning! Tatami is still in development mode. You can use the application for testing purposes, but it is very likely that your data will be erased and lost when we upgrade the system.
 tatami.menu.about=About
 tatami.menu.presentation=Presentation
 tatami.menu.tos=Terms of service
@@ -45,14 +46,14 @@ tatami.authentication.google.desc.1=This feature is for enterprise Google Apps u
 tatami.authentication.google.desc.2=Whether or not you already have a Tatami account, you can sign in with your Google Apps account.
 tatami.authentication.google.desc.3=Your email will be asked to Google and your domain name will be used to make you join the corresponding private space.
 tatami.authentication.google.submit=Authentication with Google Apps
-tatami.authentication.cgv=Terms of Service 
+tatami.authentication.cgv=Terms of Service
 tatami.remember.password.time=Automatic connection (30 days)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
 tatami.license=Source Code License
 tatami.presentation=Presentation
 tatami.presentation.text=Tatami is an enterprise micro-blogging platform.
-tatami.presentation.moreinfo=See a detailled presentation of Tatami 
+tatami.presentation.moreinfo=See a detailled presentation of Tatami
 tatami.status=Status
 tatami.status.update=Update your status
 tatami.status.update.to=Send a status update
@@ -61,9 +62,7 @@ tatami.status.reply.action=Reply
 tatami.user.favoritestatus=Favorites
 tatami.tags=Tags
 tatami.search=Search
-tatami.status.stats=Statistics
 tatami.stats.status.piechart=Status of the day
-tatami.stats.status.punchchart=Status of the week
 tatami.follow.title=Follow another user
 tatami.follow.username=Type the user name to follow
 tatami.follow.action=Follow
@@ -71,6 +70,7 @@ tatami.follow.suggestions=Who to follow?
 tatami.follow.nobody=No new user to follow today.
 
 tatami.new.status=Update
+tatami.status.characters.left=Characters left: 
 tatami.timeline=Timeline
 
 tatami.user.picture=Picture
@@ -79,7 +79,6 @@ tatami.user.email=E-mail
 tatami.user.firstName=First name
 tatami.user.lastName=Last name
 tatami.user.jobTitle=Job title
-tatami.user.email=Email
 tatami.user.phoneNumber=Phone number
 tatami.user.follow=Follow
 tatami.user.followed=Followed
@@ -131,6 +130,8 @@ tatami.user.status.shared.by=Shared by
 tatami.timeline.refresh=Refresh
 tatami.timeline.next=More
 
+tatami.timeline.shares=Shared by
+
 tatami.user.status.confirm.delete=Are you sure you want to delete the status ?
 
 tatami.presentation.title=What is Tatami?
@@ -148,7 +149,7 @@ tatami.presentation.row1.9=English and French versions available, adding other l
 
 tatami.presentation.row2.title=Works on all devices !
 tatami.presentation.row2.1=Dynamic Web application (HTML5) : nothing to install, excepted a modern browser!
-tatami.presentation.row2.2=Works on mobiles, tablets, or old-fashion computers : the application adapts itself automatically to your device's screen
+tatami.presentation.row2.2=Works on mobiles, tablets, or standard computers : the application adapts itself automatically to your device's screen
 tatami.presentation.row2.3=Stay connected with your enterprise wherever you are
 
 tatami.presentation.row3.title=Easy installation and integration with your company's IT infrastructure
@@ -156,11 +157,15 @@ tatami.presentation.row3.1=Standard Java application
 tatami.presentation.row3.2=Your data belongs to you, not to your SaaS vendor !
 tatami.presentation.row3.3=Integrates with your LDAP directory
 tatami.presentation.row3.4=Integrates with Google Apps
-tatami.presentation.row3.5=Fully Open Source : easy to extend or modify according to your needs
-tatami.presentation.row3.6=High performance, even on small hardware
-tatami.presentation.row3.7=Join the project and submit patches on our Github page: 
+tatami.presentation.row3.5=Fully Open Source, with a business-friendly Apache 2 license 
+tatami.presentation.row3.6=Easy to extend or modify according to your needs
+tatami.presentation.row3.7=High performance (based on Apache Cassandra), even on small hardware
+tatami.presentation.row3.8=Join the project and submit patches on our Github page:
 
 tatami.presentation.row4.title=Also available in SaaS mode, fully managed by Ippon Technologies
 tatami.presentation.row4.1=If you do not want to install Tatami in your company, it's easy to use directly
 tatami.presentation.row4.2=Secured multi-enterprise mode : every company has its own private space
+tatami.presentation.row4.3=256 bits SSL cryptography : all data transfers are fully secured
 
+tatami.presentation.row5.title=Need more information on our product?
+tatami.presentation.row5.1=Our sales team is looking forward to hearing from you! Call us at +33 01 46 12 48 48 or e-mail us at
