--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -6,6 +6,7 @@ tatami.ippon.twitter.follow=Suivre @ippontech sur Twitter
 tatami.title=Tatami
 tatami.profile=Profil
 tatami.home=Accueil
+tatami.beta.alert=Attention ! Tatami est en cours de développement. Vous pouvez utiliser l'application pour la tester, mais il est probable que vos données seront effacées et perdues lorsque nous mettrons le système à jour.
 tatami.menu.about=A Propos
 tatami.menu.presentation=Présentation
 tatami.menu.tos=Conditions générales de vente
@@ -52,7 +53,7 @@ tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License
 tatami.license=Licence du code source
 tatami.presentation=Présentation
 tatami.presentation.text=Tatami est un réseau social de micro-blogging, utilisable en interne dans votre entreprise.
-tatami.presentation.moreinfo=Voir une présentation détaillée de Tatami 
+tatami.presentation.moreinfo=Voir une présentation détaillée de Tatami
 tatami.status=Statut
 tatami.status.update=Mettre à jour votre statut
 tatami.status.update.to=Envoyer une mise à jour du statut
@@ -61,9 +62,7 @@ tatami.status.reply.action=Répondre
 tatami.user.favoritestatus=Favoris
 tatami.tags=Tags
 tatami.search=Recherche
-tatami.status.stats=Statistiques
 tatami.stats.status.piechart=Statuts du jour
-tatami.stats.status.punchchart=Statuts de la semaine
 tatami.follow.title=Suivre un autre utilisateur
 tatami.follow.username=Tapez l'identifiant de l'utilisateur à suivre
 tatami.follow.action=Suivre
@@ -71,6 +70,7 @@ tatami.follow.suggestions=Qui suivre ?
 tatami.follow.nobody=Personne à suivre aujourd'hui.
 
 tatami.new.status=Nouveau
+tatami.status.characters.left=Caractères restant : 
 tatami.timeline=Timeline
 
 tatami.user.picture=Photo
@@ -79,7 +79,6 @@ tatami.user.email=E-mail
 tatami.user.firstName=Prénom
 tatami.user.lastName=Nom
 tatami.user.jobTitle=Fonction
-tatami.user.email=Email
 tatami.user.phoneNumber=Numéro de téléphone
 tatami.user.follow=Suivre
 tatami.user.followed=Suivi
@@ -131,19 +130,21 @@ tatami.user.status.shared.by=Partagé par
 tatami.timeline.refresh=Rafraîchir
 tatami.timeline.next=Plus
 
+tatami.timeline.shares=Partagé par
+
 tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer le status ?
 
 tatami.presentation.title=Qu'est-ce que Tatami ?
 
-tatami.presentation.row1.title=Une solution de micro-blogging privée, spécifique à votre entreprise
-tatami.presentation.row1.1=Mettez à jour votre statut pour que vos collègues soient informés
-tatami.presentation.row1.2=Abonnez-vous aux fils d'informations de vos collègues
-tatami.presentation.row1.3=Renvoyez les informations importantes aux personnes qui vous suivent
-tatami.presentation.row1.4=Discutez et répondez à vos collègues
-tatami.presentation.row1.5=Mettez en favori les informations essentielles
-tatami.presentation.row1.6=Recherchez l'information utile grâce à notre moteur de recherche intégré
-tatami.presentation.row1.7=Utilisez des hashtags pour découvrir des informations connexes
-tatami.presentation.row1.8=Allez sur les profils de vos collègues pour voir ce sur quoi ils travaillent
+tatami.presentation.row1.title=Une solution de micro-blogging privée, spécifique à votre entreprise:
+tatami.presentation.row1.1=Mettre à jour votre statut pour que vos collègues soient informés
+tatami.presentation.row1.2=S'abonner aux fils d'information de vos collègues
+tatami.presentation.row1.3=Renvoyer les informations importantes aux personnes qui vous suivent
+tatami.presentation.row1.4=Discuter et répondre à vos collègues
+tatami.presentation.row1.5=Mettre en favori les informations essentielles
+tatami.presentation.row1.6=Rechercher l'information utile grâce à notre moteur de recherche intégré
+tatami.presentation.row1.7=Utiliser des hashtags pour découvrir des informations connexes
+tatami.presentation.row1.8=Aller sur les profils de vos collègues pour voir ce sur quoi ils travaillent
 tatami.presentation.row1.9=Versions Française et Anglaise disponibles, de nouvelles langues sont simples à ajouter
 
 tatami.presentation.row2.title=Fonctionne partout !
@@ -156,10 +157,15 @@ tatami.presentation.row3.1=Application Java standard
 tatami.presentation.row3.2=Contrairement aux solutions SaaS, vos données vous appartiennent entièrement !
 tatami.presentation.row3.3=S'intègre avec votre serveur LDAP
 tatami.presentation.row3.4=S'intègre avec Google Apps
-tatami.presentation.row3.5=Entièrement Open Source : simple à étendre ou à modifier en fonction de vos besoins
-tatami.presentation.row3.6=Peu gourmande en ressources et très performante
-tatami.presentation.row3.7=Participez au développement et proposez des corrections via notre page Github : 
+tatami.presentation.row3.5=Entièrement Open Source, sous license Apache 2 (dite "business friendly") 
+tatami.presentation.row3.6=Simple à étendre ou à modifier en fonction de vos besoins
+tatami.presentation.row3.7=Peu gourmande en ressources et très performante (basée sur Apache Cassandra)
+tatami.presentation.row3.8=Participez au développement et proposez des corrections via notre page Github :
 
 tatami.presentation.row4.title=Disponible également en version hébergée, entièrement gérée par Ippon Technologies
 tatami.presentation.row4.1=Si vous ne voulez pas installer Tatami chez vous, rien de plus simple que d'utiliser directement
 tatami.presentation.row4.2=Mode multi-entreprise sécurisé : chaque entreprise dispose de son propre espace
+tatami.presentation.row4.3=Cryptage SSL fort (256 bits) en standard : tous les transferts de données sont sécurisés 
+
+tatami.presentation.row5.title=Une question ?
+tatami.presentation.row5.1=Notre équipe commerciale reste à votre écoute - Téléphonez-nous au 01 46 12 48 48 ou envoyez-nous un e-mail à
