--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -70,7 +70,8 @@ tatami.follow.suggestions=Qui suivre ?
 tatami.follow.nobody=Personne à suivre aujourd'hui.
 
 tatami.new.status=Nouveau
-tatami.status.characters.left=Caractères restant : 
+tatami.status.characters.left=Caractères restant :
+tatami.status.update.success=Votre statut a été mis à jour !  
 tatami.timeline=Timeline
 
 tatami.user.picture=Photo
