Added popovers for shares

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -123,6 +123,7 @@ tatami.user.status.show=View
 tatami.user.status.details=Details
 tatami.user.status.reply=Reply
 tatami.user.status.share=Share
+tatami.user.status.share.success=Status successfully shared!
 tatami.user.status.favorite=Favorite
 tatami.user.status.delete=Delete
 tatami.user.status.replyto=In reply to
@@ -130,6 +131,7 @@ tatami.user.status.shared.by=Shared by
 
 tatami.timeline.refresh=Refresh
 tatami.timeline.next=More
+
 
 tatami.timeline.shares=Shared by
 
