--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -123,6 +123,7 @@ tatami.user.status.show=Voir
 tatami.user.status.details=Détails
 tatami.user.status.reply=Répondre
 tatami.user.status.share=Partager
+tatami.user.status.share.success=Le statut a été partagé!
 tatami.user.status.favorite=Favori
 tatami.user.status.delete=Supprimer
 tatami.user.status.replyto=En réponse à
