Updated blog message

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -1,7 +1,7 @@
 tatami.copyright=Copyright 2012
 tatami.ippon.technologies=Ippon Technologies
 tatami.github.fork=Fork Tatami on Github
-tatami.ippon.blog=Blog Ippon
+tatami.ippon.blog=Ippon Technologies Blog
 tatami.ippon.twitter.follow=Follow @ippontech on Twitter
 tatami.title=Tatami
 tatami.profile=Profile
