Updated menu, prepare for i18n change

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -1,6 +1,7 @@
 tatami.copyright=Copyright 2012
 tatami.ippon.technologies=Ippon Technologies
 tatami.github.fork=Fork Tatami on Github
+tatami.ippon.website=Ippon Technologies Website
 tatami.ippon.blog=Ippon Technologies Blog
 tatami.ippon.twitter.follow=Follow @ippontech on Twitter
 tatami.title=Tatami
@@ -10,6 +11,10 @@ tatami.beta.alert=Warning! Tatami is still in development mode. You can use the 
 tatami.menu.about=About
 tatami.menu.presentation=Presentation
 tatami.menu.tos=Terms of service
+tatami.menu.language=Language
+tatami.menu.language.en=English
+tatami.menu.language.fr=Francais
+tatami.menu.product=Get the software
 tatami.menu.license=Source code license
 tatami.search.placeholder=Search
 tatami.search.button=Search
