--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -1,6 +1,7 @@
 tatami.copyright=Copyright 2012
 tatami.ippon.technologies=Ippon Technologies
 tatami.github.fork=Forker Tatami sur Github
+tatami.ippon.website=Site Web d'Ippon Technologies
 tatami.ippon.blog=Blog d'Ippon Technologies
 tatami.ippon.twitter.follow=Suivre @ippontech sur Twitter
 tatami.title=Tatami
@@ -10,6 +11,10 @@ tatami.beta.alert=Attention ! Tatami est en cours de développement. Vous pouvez 
 tatami.menu.about=A Propos
 tatami.menu.presentation=Présentation
 tatami.menu.tos=Conditions générales de vente
+tatami.menu.language=Langue
+tatami.menu.language.en=English
+tatami.menu.language.fr=Français
+tatami.menu.product=Téléchargez Tatami
 tatami.menu.license=Licence du code source
 tatami.search.placeholder=Rechercher
 tatami.search.button=Rechercher
