Theme can be configured, installed all themes from http://bootswatch.com/

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -102,6 +102,7 @@ tatami.menu.account=Account
 tatami.menu.profile=Profile
 tatami.menu.password=Password
 tatami.menu.enterprise=Enterprise
+tatami.menu.theme=Theme
 
 tatami.form.previous=Previous
 tatami.form.next=Next
