--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -102,6 +102,7 @@ tatami.menu.account=Compte
 tatami.menu.profile=Profil
 tatami.menu.password=Mot de passe
 tatami.menu.enterprise=Entreprise
+tatami.menu.theme=Thème
 
 tatami.form.previous=Précédent
 tatami.form.next=Suivant
