--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -88,7 +88,7 @@ tatami.user.jobTitle=Fonction
 tatami.user.phoneNumber=Numéro de téléphone
 tatami.user.follow=Suivre
 tatami.user.followed=Suivi
-tatami.badge.status=Statut
+tatami.badge.status=Statuts
 tatami.badge.followed=Suivis
 tatami.badge.followers=Abonnés
 tatami.user.undefined=Utilisateur inconnu.
