Theme integration is complete!

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -123,6 +123,7 @@ tatami.user.old.password.error=Ancien mot de passe incorrect
 tatami.user.new.password=Nouveau mot de passe
 tatami.user.new.password.confirmation.error=La confirmation du nouveau mot de passe est incorrecte
 tatami.user.new.password.confirmation=Confirmation du mot de passe
+tatami.user.theme.current=Thème actuel :
 
 tatami.user.profile.show=Profil de
 tatami.user.status.show=Voir
