--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -123,6 +123,7 @@ tatami.user.old.password.error=The old password is incorrect.
 tatami.user.new.password=New password
 tatami.user.new.password.confirmation=New password confirmation
 tatami.user.new.password.confirmation.error=The new password confirmation is incorrect
+tatami.user.theme.current=Current theme :
 
 tatami.user.profile.show=Show profile of
 tatami.user.status.show=View
