--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -77,6 +77,8 @@ tatami.follow.nobody=No new user to follow today.
 tatami.new.status=Update
 tatami.status.characters.left=Characters left:
 tatami.status.update.success=Your status has been updated! 
+tatami.status.help.title=Help
+tatami.status.help=<ul><li>You can use <b>#tags</b> by adding a <b>#</b> before a keyword</li><li>To mention a user, use his <b>@username</b></li><li>To write rich content, you can use the <a href='http://en.wikipedia.org/wiki/Markdown' target='_blank'>MarkDown</a> syntax, for example *text* to have a text in <i>italic</i> or **text** to have a text in <b>bold</b>.</li><li>If you write a link like http://www.ippon.fr, it will be automatically clickable</li></ul>
 tatami.timeline=Timeline
 
 tatami.user.picture=Picture
