--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -77,6 +77,8 @@ tatami.follow.nobody=Personne à suivre aujourd'hui.
 tatami.new.status=Nouveau
 tatami.status.characters.left=Caractères restant :
 tatami.status.update.success=Votre statut a été mis à jour !  
+tatami.status.help.title=Aide
+tatami.status.help=<ul><li>Vous pouvez utiliser des <b>#tags</b> en ajoutant un <b>#</b> devant un mot-clef</li><li>Pour mentionner un utilisateur, utilisez son <b>@nom_utilisateur</b></li><li>Pour enrichir votre texte, vous pouvez utiliser la syntaxe <a href='http://fr.wikipedia.org/wiki/Markdown' target='_blank'>MarkDown</a>, par exemple *texte* pour écrire en <i>italique</i> pour **texte** pour écrire en <b>gras</b>.</li><li>Si vous écrivez un lien de type http://www.ippon.fr, il sera automatiquement cliquable</li></ul>
 tatami.timeline=Timeline
 
 tatami.user.picture=Photo
