--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -7,7 +7,7 @@ tatami.ippon.twitter.follow=Follow @ippontech on Twitter
 tatami.title=Tatami
 tatami.profile=Profile
 tatami.home=Home
-tatami.beta.alert=Warning! Tatami is still in development mode. You can use the application for testing purposes, but it is very likely that your data will be erased and lost when we upgrade the system.
+tatami.beta.alert=Tatami is still in beta. You can use the application for testing purposes, but if you want to use it professionally we recommend you to contact <a href="mailto:commercial@ippon.fr">commercial@ippon.fr</a>.
 tatami.menu.about=About
 tatami.menu.presentation=Presentation
 tatami.menu.tos=Terms of service
@@ -56,8 +56,7 @@ tatami.remember.password.time=Automatic connection (30 days)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
 tatami.license=Source Code License
-tatami.presentation=Presentation
-tatami.presentation.text=Tatami is an enterprise micro-blogging platform.
+tatami.presentation=Welcome to Tatami, an Open Source enterprise social network
 tatami.presentation.moreinfo=See a detailled presentation of Tatami
 tatami.status=Status
 tatami.status.update=Update your status
@@ -148,7 +147,7 @@ tatami.user.status.confirm.delete=Are you sure you want to delete the status ?
 
 tatami.presentation.title=What is Tatami?
 
-tatami.presentation.row1.title=A private, enterprise micro-blogging solution
+tatami.presentation.row1.title=A private, enterprise social network
 tatami.presentation.row1.1=Update your status to inform your co-workers
 tatami.presentation.row1.2=Subscribe to other employees' time lines
 tatami.presentation.row1.3=Share important information to your followers
