--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -7,7 +7,7 @@ tatami.ippon.twitter.follow=Suivre @ippontech sur Twitter
 tatami.title=Tatami
 tatami.profile=Profil
 tatami.home=Accueil
-tatami.beta.alert=Attention ! Tatami est en cours de développement. Vous pouvez utiliser l'application pour la tester, mais il est probable que vos données seront effacées et perdues lorsque nous mettrons le système à jour.
+tatami.beta.alert=Tatami est phase de beta test. Vous pouvez utiliser l'application pour la tester, mais si vous voulez l'utiliser professionnellement nous vous encourageons à contacter <a href="mailto:commercial@ippon.fr">commercial@ippon.fr</a>.
 tatami.menu.about=A Propos
 tatami.menu.presentation=Présentation
 tatami.menu.tos=Conditions générales de vente
@@ -56,8 +56,7 @@ tatami.remember.password.time=Connexion automatique (30 jours)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
 tatami.license=Licence du code source
-tatami.presentation=Présentation
-tatami.presentation.text=Tatami est un réseau social de micro-blogging, utilisable en interne dans votre entreprise.
+tatami.presentation=Bienvenue sur Tatami, un réseau social d'entreprise Open Source
 tatami.presentation.moreinfo=Voir une présentation détaillée de Tatami
 tatami.status=Statut
 tatami.status.update=Mettre à jour votre statut
@@ -147,7 +146,7 @@ tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer le stat
 
 tatami.presentation.title=Qu'est-ce que Tatami ?
 
-tatami.presentation.row1.title=Une solution de micro-blogging privée, spécifique à votre entreprise:
+tatami.presentation.row1.title=Un réseau social d'entreprise privé
 tatami.presentation.row1.1=Mettre à jour votre statut pour que vos collègues soient informés
 tatami.presentation.row1.2=S'abonner aux fils d'information de vos collègues
 tatami.presentation.row1.3=Renvoyer les informations importantes aux personnes qui vous suivent
@@ -168,7 +167,7 @@ tatami.presentation.row3.1=Application Java standard
 tatami.presentation.row3.2=Contrairement aux solutions SaaS, vos données vous appartiennent entièrement !
 tatami.presentation.row3.3=S'intègre avec votre serveur LDAP
 tatami.presentation.row3.4=S'intègre avec Google Apps
-tatami.presentation.row3.5=Entièrement Open Source, sous license Apache 2 (dite "business friendly") 
+tatami.presentation.row3.5=Entièrement Open Source, sous licence Apache 2 (dite "business friendly") 
 tatami.presentation.row3.6=Simple à étendre ou à modifier en fonction de vos besoins
 tatami.presentation.row3.7=Peu gourmande en ressources et très performante (basée sur Apache Cassandra)
 tatami.presentation.row3.8=Participez au développement et proposez des corrections via notre page Github :
