Typeahead works for finding users

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -67,9 +67,9 @@ tatami.user.favoritestatus=Favorites
 tatami.tags=Tags
 tatami.search=Search
 tatami.stats.status.piechart=Status of the day
-tatami.follow.title=Follow another user
-tatami.follow.username=Type the user name to follow
-tatami.follow.action=Follow
+tatami.find.title=Find another user
+tatami.find.username=Type the username to find
+tatami.find.action=Find
 tatami.follow.suggestions=Who to follow?
 tatami.follow.nobody=No new user to follow today.
 
