--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -67,9 +67,9 @@ tatami.user.favoritestatus=Favoris
 tatami.tags=Tags
 tatami.search=Recherche
 tatami.stats.status.piechart=Statuts du jour
-tatami.follow.title=Suivre un autre utilisateur
-tatami.follow.username=Tapez l'identifiant de l'utilisateur à suivre
-tatami.follow.action=Suivre
+tatami.find.title=Chercher un autre utilisateur
+tatami.find.username=Tapez l'identifiant d'un utilisateur
+tatami.find.action=Chercher
 tatami.follow.suggestions=Qui suivre ?
 tatami.follow.nobody=Personne à suivre aujourd'hui.
 
