Finding a user with typeahead works

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -67,7 +67,7 @@ tatami.user.favoritestatus=Favorites
 tatami.tags=Tags
 tatami.search=Search
 tatami.stats.status.piechart=Status of the day
-tatami.find.title=Find another user
+tatami.find.title=Find a user
 tatami.find.username=Type the username to find
 tatami.find.action=Find
 tatami.follow.suggestions=Who to follow?
