--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -67,7 +67,7 @@ tatami.user.favoritestatus=Favoris
 tatami.tags=Tags
 tatami.search=Recherche
 tatami.stats.status.piechart=Statuts du jour
-tatami.find.title=Chercher un autre utilisateur
+tatami.find.title=Chercher un utilisateur
 tatami.find.username=Tapez l'identifiant d'un utilisateur
 tatami.find.action=Chercher
 tatami.follow.suggestions=Qui suivre ?
