Basic template for trends

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -72,6 +72,7 @@ tatami.find.username=Type the username to find
 tatami.find.action=Find
 tatami.follow.suggestions=Who to follow?
 tatami.follow.nobody=No new user to follow today.
+tatami.trends.title=Trends
 
 tatami.new.status=Update
 tatami.status.characters.left=Characters left:
