--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -72,6 +72,7 @@ tatami.find.username=Tapez l'identifiant d'un utilisateur
 tatami.find.action=Chercher
 tatami.follow.suggestions=Qui suivre ?
 tatami.follow.nobody=Personne à suivre aujourd'hui.
+tatami.trends.title=Tendances
 
 tatami.new.status=Nouveau
 tatami.status.characters.left=Caractères restant :
