--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -73,6 +73,7 @@ tatami.find.action=Find
 tatami.follow.suggestions=Who to follow?
 tatami.follow.nobody=No new user to follow today.
 tatami.trends.title=Trends
+tatami.trends.user.title=User trends
 
 tatami.new.status=Update
 tatami.status.characters.left=Characters left:
