--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -73,6 +73,7 @@ tatami.find.action=Chercher
 tatami.follow.suggestions=Qui suivre ?
 tatami.follow.nobody=Personne à suivre aujourd'hui.
 tatami.trends.title=Tendances
+tatami.trends.user.title=Tendances pour l'utilisateur
 
 tatami.new.status=Nouveau
 tatami.status.characters.left=Caractères restant :
