Moved "status of the day" to the account pages

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -66,7 +66,6 @@ tatami.status.reply.action=Reply
 tatami.user.favoritestatus=Favorites
 tatami.tags=Tags
 tatami.search=Search
-tatami.stats.status.piechart=Status of the day
 tatami.find.title=Find a user
 tatami.find.username=Type the username to find
 tatami.find.action=Find
@@ -104,7 +103,8 @@ tatami.menu.search=Search...
 tatami.menu.account=Account
 tatami.menu.profile=Profile
 tatami.menu.password=Password
-tatami.menu.enterprise=Enterprise
+tatami.menu.directory=Directory
+tatami.menu.status.of.the.day=Statuses of the day
 tatami.menu.theme=Theme
 
 tatami.form.previous=Previous
@@ -141,7 +141,6 @@ tatami.user.status.shared.by=Shared by
 
 tatami.timeline.refresh=Refresh
 tatami.timeline.next=More
-
 
 tatami.timeline.shares=Shared by
 
