--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -66,7 +66,6 @@ tatami.status.reply.action=Répondre
 tatami.user.favoritestatus=Favoris
 tatami.tags=Tags
 tatami.search=Recherche
-tatami.stats.status.piechart=Statuts du jour
 tatami.find.title=Chercher un utilisateur
 tatami.find.username=Tapez l'identifiant d'un utilisateur
 tatami.find.action=Chercher
@@ -104,7 +103,8 @@ tatami.menu.search=Recherche...
 tatami.menu.account=Compte
 tatami.menu.profile=Profil
 tatami.menu.password=Mot de passe
-tatami.menu.enterprise=Entreprise
+tatami.menu.directory=Annuaire
+tatami.menu.status.of.the.day=Statuts du jour
 tatami.menu.theme=Thème
 
 tatami.form.previous=Précédent
