The mention line works!

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -64,6 +64,7 @@ tatami.status.update.to=Send a status update
 tatami.status.reply=Reply to this status
 tatami.status.reply.action=Reply
 tatami.user.favoritestatus=Favorites
+tatami.mentions=Mentions
 tatami.tags=Tags
 tatami.search=Search
 tatami.find.title=Find a user
