--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -64,6 +64,7 @@ tatami.status.update.to=Envoyer une mise à jour du statut
 tatami.status.reply=Répondre à ce statut
 tatami.status.reply.action=Répondre
 tatami.user.favoritestatus=Favoris
+tatami.mentions=Mentions
 tatami.tags=Tags
 tatami.search=Recherche
 tatami.find.title=Chercher un utilisateur
