--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -58,7 +58,6 @@ tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License
 tatami.license=Licence du code source
 tatami.presentation=Bienvenue sur Tatami, un réseau social d'entreprise Open Source
 tatami.presentation.moreinfo=Voir une présentation détaillée de Tatami
-tatami.status=Statut
 tatami.status.update=Mettre à jour votre statut
 tatami.status.update.to=Envoyer une mise à jour du statut
 tatami.status.reply=Répondre à ce statut
@@ -80,7 +79,7 @@ tatami.status.characters.left=Caractères restant :
 tatami.status.update.success=Votre statut a été mis à jour !  
 tatami.status.help.title=Aide
 tatami.status.help=<ul><li>Vous pouvez utiliser des <b>#tags</b> en ajoutant un <b>#</b> devant un mot-clef</li><li>Pour mentionner un utilisateur, utilisez son <b>@nom_utilisateur</b></li><li>Pour enrichir votre texte, vous pouvez utiliser la syntaxe <a href='http://fr.wikipedia.org/wiki/Markdown' target='_blank'>MarkDown</a>, par exemple *texte* pour écrire en <i>italique</i> ou **texte** pour écrire en <b>gras</b>.</li><li>Si vous écrivez un lien de type http://www.ippon.fr, il sera automatiquement cliquable</li></ul>
-tatami.timeline=Timeline
+tatami.timeline=Actualité
 
 tatami.user.picture=Photo
 tatami.user.picture.legend=Pour mettre à jour votre photo, connectez-vous sur
