First backend & simple admin for groups

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -102,6 +102,7 @@ tatami.user.status=Status
 tatami.menu.search=Search...
 tatami.menu.account=Account
 tatami.menu.profile=Profile
+tatami.menu.groups=Groups
 tatami.menu.password=Password
 tatami.menu.directory=Directory
 tatami.menu.status.of.the.day=Statuses of the day
@@ -145,6 +146,13 @@ tatami.timeline.next=More
 tatami.timeline.shares=Shared by
 
 tatami.user.status.confirm.delete=Are you sure you want to delete the status ?
+
+tatami.group.name=Group
+tatami.group.counter=Members
+tatami.group.add=Create a new group
+tatami.group.add.success=Group successfully created
+tatami.group.add.legend=Name of the group
+tatami.group.list.admin=List of groups that you currently manage
 
 tatami.presentation.title=What is Tatami?
 
