--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -102,6 +102,7 @@ tatami.user.status=Statut
 tatami.menu.search=Recherche...
 tatami.menu.account=Compte
 tatami.menu.profile=Profil
+tatami.menu.groups=Groupes
 tatami.menu.password=Mot de passe
 tatami.menu.directory=Annuaire
 tatami.menu.status.of.the.day=Statuts du jour
@@ -145,6 +146,13 @@ tatami.timeline.next=Plus
 tatami.timeline.shares=Partagé par
 
 tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer le status ?
+
+tatami.group.name=Groupe
+tatami.group.counter=Membres
+tatami.group.add=Créer un nouveau groupe
+tatami.group.add.legend=Nom du groupe
+tatami.group.add.success=Groupe correctement créé
+tatami.group.list.admin=Liste des groupes que vous gérez
 
 tatami.presentation.title=Qu'est-ce que Tatami ?
 
