started user management for groups

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -24,6 +24,7 @@ tatami.username=User name
 tatami.password=Password
 tatami.404=Page not found.
 tatami.500=An error has occurred.
+tatami.back=Back
 
 tatami.register.title=You don't have an account (yet)
 tatami.register.text.1=To create an account in Tatami, please register your e-mail address.
@@ -153,6 +154,12 @@ tatami.group.add=Create a new group
 tatami.group.add.success=Group successfully created
 tatami.group.add.legend=Name of the group
 tatami.group.list.admin=List of groups that you currently manage
+tatami.group.edit=Manage group
+tatami.group.edit.link=Manage
+tatami.group.edit.list=Group members
+tatami.group.role=Role
+tatami.group.role.admin=Administrator
+tatami.group.role.member=Member
 
 tatami.presentation.title=What is Tatami?
 
