--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -24,6 +24,7 @@ tatami.username=Nom d'utilisateur
 tatami.password=Mot de Passe
 tatami.404=Page non trouvée.
 tatami.500=Une erreur s'est produite.
+tatami.back=Retour
 
 tatami.register.title=Vous n'avez pas (encore) de compte
 tatami.register.text.1=Pour créer votre compte Tatami, merci d'enregistrer votre adresse e-mail.
@@ -153,6 +154,12 @@ tatami.group.add=Créer un nouveau groupe
 tatami.group.add.legend=Nom du groupe
 tatami.group.add.success=Groupe correctement créé
 tatami.group.list.admin=Liste des groupes que vous gérez
+tatami.group.edit=Gestion du groupe
+tatami.group.edit.link=Gestion
+tatami.group.edit.list=Liste des membres
+tatami.group.role=Role
+tatami.group.role.admin=Administrateur
+tatami.group.role.member=Membre
 
 tatami.presentation.title=Qu'est-ce que Tatami ?
 
