Group management works!

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -24,7 +24,6 @@ tatami.username=User name
 tatami.password=Password
 tatami.404=Page not found.
 tatami.500=An error has occurred.
-tatami.back=Back
 
 tatami.register.title=You don't have an account (yet)
 tatami.register.text.1=To create an account in Tatami, please register your e-mail address.
@@ -152,11 +151,23 @@ tatami.group.name=Group
 tatami.group.counter=Members
 tatami.group.add=Create a new group
 tatami.group.add.success=Group successfully created
-tatami.group.add.legend=Name of the group
+tatami.group.add.title=Name of the group
+tatami.group.add.description=Description
+tatami.group.add.access=Access
+tatami.group.add.public=Public
+tatami.group.add.private=Private
+tatami.group.add.public.alert=Warning! If this group is public, everybody can access it
 tatami.group.list.admin=List of groups that you currently manage
-tatami.group.edit=Manage group
 tatami.group.edit.link=Manage
+tatami.group.edit.success=Group updated successfully
 tatami.group.edit.list=Group members
+tatami.group.edit.details=Update group details
+tatami.group.edit.member.add.success=User successfully added
+tatami.group.edit.member.remove.success=User successfully removed
+tatami.group.edit.member.add.no.user=You must enter a user name
+tatami.group.edit.member.add.wrong.user=This user name does not exist
+tatami.group.edit.member.add=Add a member
+tatami.group.edit.member.delete=Remove
 tatami.group.role=Role
 tatami.group.role.admin=Administrator
 tatami.group.role.member=Member
