--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -24,7 +24,6 @@ tatami.username=Nom d'utilisateur
 tatami.password=Mot de Passe
 tatami.404=Page non trouvée.
 tatami.500=Une erreur s'est produite.
-tatami.back=Retour
 
 tatami.register.title=Vous n'avez pas (encore) de compte
 tatami.register.text.1=Pour créer votre compte Tatami, merci d'enregistrer votre adresse e-mail.
@@ -151,12 +150,24 @@ tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer le stat
 tatami.group.name=Groupe
 tatami.group.counter=Membres
 tatami.group.add=Créer un nouveau groupe
-tatami.group.add.legend=Nom du groupe
-tatami.group.add.success=Groupe correctement créé
+tatami.group.add.title=Nom du groupe
+tatami.group.add.description=Description
+tatami.group.add.access=Accès
+tatami.group.add.public=Public
+tatami.group.add.private=Privé
+tatami.group.add.public.alert=Attention! Si ce groupe est publique, tout le monde y aura accès
+tatami.group.add.success=Groupe créé avec succès
 tatami.group.list.admin=Liste des groupes que vous gérez
-tatami.group.edit=Gestion du groupe
 tatami.group.edit.link=Gestion
+tatami.group.edit.success=Groupe mis à jour avec succès
+tatami.group.edit.details=Modifier les détails du groupe
 tatami.group.edit.list=Liste des membres
+tatami.group.edit.member.add.success=Utilisateur ajouté avec succès
+tatami.group.edit.member.remove.success=Utilisateur enlevé avec succès
+tatami.group.edit.member.add.no.user=Vous devez entrer le nom d'un utilisateur
+tatami.group.edit.member.add.wrong.user=Cet utilisateur n'existe pas
+tatami.group.edit.member.add=Ajouter un membre
+tatami.group.edit.member.delete=Enlever
 tatami.group.role=Role
 tatami.group.role.admin=Administrateur
 tatami.group.role.member=Membre
