Prepared group tab on the home page

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -65,6 +65,7 @@ tatami.status.reply.action=Reply
 tatami.user.favoritestatus=Favorites
 tatami.mentions=Mentions
 tatami.tags=Tags
+tatami.tag=Tag
 tatami.search=Search
 tatami.find.title=Find a user
 tatami.find.username=Type the username to find
