--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -65,6 +65,7 @@ tatami.status.reply.action=Répondre
 tatami.user.favoritestatus=Favoris
 tatami.mentions=Mentions
 tatami.tags=Tags
+tatami.tag=Tag
 tatami.search=Recherche
 tatami.find.title=Chercher un utilisateur
 tatami.find.username=Tapez l'identifiant d'un utilisateur
