group UI update

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -172,6 +172,7 @@ tatami.group.edit.member.delete=Remove
 tatami.group.role=Role
 tatami.group.role.admin=Administrator
 tatami.group.role.member=Member
+tatami.group.select=Select a group on the "Groups" menu on the left
 
 tatami.presentation.title=What is Tatami?
 
