--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -172,6 +172,7 @@ tatami.group.edit.member.delete=Enlever
 tatami.group.role=Role
 tatami.group.role.admin=Administrateur
 tatami.group.role.member=Membre
+tatami.group.select=Sélectionnez un groupe dans le menu "Groupes" à gauche
 
 tatami.presentation.title=Qu'est-ce que Tatami ?
 
