--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -156,7 +156,7 @@ tatami.group.add.description=Description
 tatami.group.add.access=Accès
 tatami.group.add.public=Public
 tatami.group.add.private=Privé
-tatami.group.add.public.alert=Attention! Si ce groupe est publique, tout le monde y aura accès
+tatami.group.add.public.alert=Attention! Si ce groupe est public, tout le monde y aura accès
 tatami.group.add.success=Groupe créé avec succès
 tatami.group.list.admin=Liste des groupes que vous gérez
 tatami.group.edit.link=Gestion
