First very basic version with Atmosphere !!

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -67,6 +67,7 @@ tatami.mentions=Mentions
 tatami.tags=Tags
 tatami.tag=Tag
 tatami.search=Search
+tatami.who.is.online.title=Who is online?
 tatami.find.title=Find a user
 tatami.find.username=Type the username to find
 tatami.find.action=Find
