--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -67,6 +67,7 @@ tatami.mentions=Mentions
 tatami.tags=Tags
 tatami.tag=Tag
 tatami.search=Recherche
+tatami.who.is.online.title=Qui est en ligne ?
 tatami.find.title=Chercher un utilisateur
 tatami.find.username=Tapez l'identifiant d'un utilisateur
 tatami.find.action=Chercher
