"who is online" should be working

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -69,7 +69,7 @@ tatami.tag=Tag
 tatami.search=Search
 tatami.who.is.online.title=Who is online?
 tatami.find.title=Find a user
-tatami.find.username=Type the username to find
+tatami.find.username=Username
 tatami.find.action=Find
 tatami.follow.suggestions=Who to follow?
 tatami.follow.nobody=No new user to follow today.
