--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -69,7 +69,7 @@ tatami.tag=Tag
 tatami.search=Recherche
 tatami.who.is.online.title=Qui est en ligne ?
 tatami.find.title=Chercher un utilisateur
-tatami.find.username=Tapez l'identifiant d'un utilisateur
+tatami.find.username=Identifiant utilisateur
 tatami.find.action=Chercher
 tatami.follow.suggestions=Qui suivre ?
 tatami.follow.nobody=Personne à suivre aujourd'hui.
