Corrected user group bug, and user update bug

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -159,7 +159,7 @@ tatami.group.add.access=Access
 tatami.group.add.public=Public
 tatami.group.add.private=Private
 tatami.group.add.public.alert=Warning! If this group is public, everybody can access it
-tatami.group.list.admin=List of groups that you currently manage
+tatami.group.list=Your groups
 tatami.group.edit.link=Manage
 tatami.group.edit.success=Group updated successfully
 tatami.group.edit.list=Group members
