--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -159,7 +159,7 @@ tatami.group.add.public=Public
 tatami.group.add.private=Privé
 tatami.group.add.public.alert=Attention! Si ce groupe est public, tout le monde y aura accès
 tatami.group.add.success=Groupe créé avec succès
-tatami.group.list.admin=Liste des groupes que vous gérez
+tatami.group.list=Vos groupes
 tatami.group.edit.link=Gestion
 tatami.group.edit.success=Groupe mis à jour avec succès
 tatami.group.edit.details=Modifier les détails du groupe
