--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -152,6 +152,8 @@ tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer le stat
 tatami.group.name=Groupe
 tatami.group.counter=Membres
 tatami.group.add=Créer un nouveau groupe
+tatami.group.add.success=Groupe créé avec succès
+tatami.group.add.error=Une erreur s'est produite en créant le groupe
 tatami.group.add.title=Nom du groupe
 tatami.group.add.description=Description
 tatami.group.add.access=Accès
