Handle session expiration for timeline polling ajax requests

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -25,6 +25,10 @@ tatami.password=Password
 tatami.404=Page not found.
 tatami.500=An error has occurred.
 
+tatami.login.modal.timeout.title=Warning
+tatami.login.modal.timeout.message=You were disconnected. Sign in again to use Tatami.
+tatami.login.modal.timeout.close=Close
+
 tatami.register.title=You don't have an account (yet)
 tatami.register.text.1=To create an account in Tatami, please register your e-mail address.
 tatami.register.text.2=A confirmation message will be sent to the e-mail address you provided.
