--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -25,6 +25,10 @@ tatami.password=Mot de Passe
 tatami.404=Page non trouvée.
 tatami.500=Une erreur s'est produite.
 
+tatami.login.modal.timeout.title=Attention
+tatami.login.modal.timeout.message=Vous avez été déconnecté. Vous devez vous identifier à nouveau pour accéder à Tatami
+tatami.login.modal.timeout.close=Fermer
+
 tatami.register.title=Vous n'avez pas (encore) de compte
 tatami.register.text.1=Pour créer votre compte Tatami, merci d'enregistrer votre adresse e-mail.
 tatami.register.text.2=Un message de confirmation sera envoyé à l'adresse e-mail que vous avez fournie.
